--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Build App
         run: yarn build
+        env:
+          REPO_NAME: ${{ github.event.repository.name }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
